--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
+    "prebuild": "rimraf dist/",
+    "build": "tsc --project tsconfig.build.json",
     "dev": "nodemon src/index.ts",
     "prepare": "husky install"
   },
@@ -28,6 +30,7 @@
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@types/app-root-path": "^1.2.4",
+    "@types/fs-extra": "^9.0.13",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "eslint": "^8.23.0",
@@ -39,12 +42,15 @@
     "jest": "^29.0.1",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
+    "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
   },
   "dependencies": {
     "app-root-path": "^3.1.0",
-    "badwords-list": "^1.0.0"
+    "axios": "^0.27.2",
+    "badwords-list": "^1.0.0",
+    "fs-extra": "^10.1.0"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
