--- a/tsconfig.json
+++ b/tsconfig.json
@@ -101,7 +101,7 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "build", "test"],
+  "exclude": ["node_modules"],
   "ts-node": {
     "files": true
   }
