--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "prebuild": "rimraf dist/",
     "build": "tsc --project tsconfig.build.json",
     "dev": "nodemon src/index.ts",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest --verbose",
+    "test:dev": "jest --watchAll --verbose"
   },
   "repository": {
     "type": "git",
@@ -31,6 +33,7 @@
     "@commitlint/config-conventional": "^17.1.0",
     "@types/app-root-path": "^1.2.4",
     "@types/fs-extra": "^9.0.13",
+    "@types/jest": "^29.0.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "eslint": "^8.23.0",
@@ -43,6 +46,7 @@
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
+    "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
   },
